[FE + BE] feat: enhance Auth logic use http only cookies
